# nexus-sandbox

./: CMakeLists.txt  README.md
doc/: notes.md
results/: dmsc-cluster-sample-file-gzip  dmsc-cluster-sample-file-no-compression  dmsc-cluster-sample-file.gnuplot  ssd-large-sample-file-gzip  ssd-large-sample-file-no-compression  ssd-sample-file-gzip  ssd-sample-file-no-compression  ssd-sample-file.gnuplot
scripts/: convert_nonstandard.py  create_file.py  create_with_NXevent_data.py  grow.py  nexus_recompress_all.py
src/: CMakeLists.txt  NXevent_data_loader.cpp  NXevent_data_loader.h  NXevent_data_main.cpp  load_parallel.cpp  read.h  timer.h
